--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
     "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.3",
     "jwt-decode": "^4.0.0",
     "mysql2": "^3.15.3",
     "next": "15.5.4",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.13",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.3.3",
     "@types/node": "24.6.2",
     "@types/react": "19.2.0",
-    "eslint": "^9",
+    "eslint": "^9.39.1",
     "eslint-config-next": "15.5.4"
   }
 }
