--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "plugins": [
       {
         "name": "next"
@@ -27,8 +27,16 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "src/app/components/log_in/index.jsx", "src/app/components/landpage/index.jsx", "src/app/utilities/index.js", "src/app/components/sign_up/index.jsx", "src/app/(pages)/login/page.jsx", "src/app/components/dashboard/index.jsx", "src/app/components/exams/index.jsx"  ],
+    "**/*.tsx",
+    "src/app/components/log_in/index.jsx",
+    "src/app/components/landpage/index.jsx",
+    "src/app/utilities/index.js",
+    "src/app/components/sign_up/index.jsx",
+    "src/app/(pages)/login/page.jsx",
+    "src/app/components/dashboard/index.jsx",
+    "src/app/components/exams/index.jsx",
+    ".next/dev/types/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
