Refactor About, Dashboard, Exam, and Manage Exams pages to include email verification and user data fetching; integrate Supabase for authentication and storage operations; enhance user experience with SweetAlert2 for notifications; implement file upload functionality for exam management; update API links configuration; and improve error handling across services.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "src/app/components/dashboard/index.jsx",
     "src/app/components/exams/index.jsx",
     ".next/dev/types/**/*.ts"
-  ],
+, "src/app/utilities/Fetch_toFile.js"  ],
   "exclude": [
     "node_modules"
   ]
